# quiz

./: .gitignore  README.md  all.html  all.js  answer-tag.js  index.html  main.py  pyproject.toml  question-tag.js  questions.js  quiz.css  quiz.js  quiz.py  style.css  tags.js  template.py
questions/: datascience.py
